--- a/admin/student/registration.html
+++ b/admin/student/registration.html
@@ -269,7 +269,7 @@
 };
   
   
-  const schoolId="capital";
+  const schoolId="almadeenah";
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
