--- a/admin/student/profile.html
+++ b/admin/student/profile.html
@@ -251,7 +251,7 @@
 };
   
   
-  const schoolId="capital";
+  const schoolId="almadeenah";
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
