--- a/admin/school-fees/setting.html
+++ b/admin/school-fees/setting.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+ <script src="../../config.js"></script>
+  
   <title>School Fees Manager</title>
   <style>
     body {
@@ -152,7 +154,7 @@
 };
     
     
-  let schoolId = "capital";
+ // let schoolId = "capital";
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
