--- a/admin/admin.html
+++ b/admin/admin.html
@@ -284,6 +284,12 @@ z-index: 102;
       <h2>Student Attendance</h2>
       <a href="stdAttendance.html">Monitor Student Attendance</a>
     </div-->
+          <div class="card classCenter">
+      <h2>Admission</h2>
+      <a href="admission/application.html">Application</a>
+              <a href="admission/admissions.html">Admissions</a>
+            
+          </div>
       
      <div class="card classCenter">
       <h2>Student Center</h2>
