--- a/admin/admin.html
+++ b/admin/admin.html
@@ -287,7 +287,7 @@ z-index: 102;
           <div class="card classCenter">
       <h2>Admission</h2>
       <a href="admission/application.html">Application</a>
-              <a href="admission/admissions.html">Admissions</a>
+              <a href="admission/admission.html">Admissions</a>
             
           </div>
       
