--- a/admin/student/registration.html
+++ b/admin/student/registration.html
@@ -4,20 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" href="reg.css" />
-  <title>New Student Registration</title>
-  
-  <style>
-    
-  
-
-
-
-
-
-  
-  
-
-  </style>
+  <title>New Student Registration</titl>
 </head>
 <body>
 <div id="session">Session: </div>
