--- a/admin/student/index.html
+++ b/admin/student/index.html
@@ -210,7 +210,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Student Center</h1>
+    <h1>STUDENT CENTER</h1>
 
     <label for="searchBy">Search by</label>
     <select id="searchBy">
