--- a/admin/student/registration.html
+++ b/admin/student/registration.html
@@ -297,7 +297,7 @@
 
       <div class="form-group">
         <label for="house">House</label>
-        <select id="house" name="class" required>
+        <select id="house" name="house" required>
           <option value="">Select House</option>
           <option value="red">Red</option>
           <option value="green">Green</option>
