--- a/admin/admin.html
+++ b/admin/admin.html
@@ -343,15 +343,15 @@ z-index: 102;
       <a href="session.html">Manage Session</a>
     </div>
 
-    <!--div class="card section">
+    <div class="card section">
       <h2>School Sections</h2>
       <a href="section.html">Manage Sections</a>
-    </div-->
+    </div>
 
-    <!--div class="card subjects">
+    <div class="card subjects">
       <h2>Subjects</h2>
       <a href="subjects.html">Manage Subjects</a>
-    </div-->
+    </div>
 
     <div class="card teachers">
       <h2>Teachers</h2>
