--- a/admin/manageAdmins.html
+++ b/admin/manageAdmins.html
@@ -204,11 +204,13 @@
     subjects: "Manage school subjects",
     auth: "Authorize teach and sign",
     monTAS: "Monitor teach and sign",
-    monSA: "Monitor Student Attendance",
-    feesSet: "Fix School Fees",
-    feesRecord: "Record School Fees",
-    feesView: "View School Fees",
-    feesDefaulter: "Check School Fees Defaulters"
+    monSA: "Monitor student attendance",
+    feesSet: "Fix school fees",
+    feesRecord: "Record school fees",
+    feesView: "View school fees",
+    feesDefaulter: "Check school fees defaulters",
+    application: "Manage application for school admission",
+    admission: "Manage school admission"
   };
   
   
