--- a/admin/bursary/index.html
+++ b/admin/bursary/index.html
@@ -479,7 +479,7 @@ const terms = ["first term", "second term", "third term"];
       localStorage.setItem("session", JSON.stringify(session));
       localStorage.setItem("fee", dueFee);
       
-      window.location.href = "record/entry.html";
+      window.location.href = "entry.html";
     }
     container.appendChild(resultElm);
   });
