--- a/admin/student/class.html
+++ b/admin/student/class.html
@@ -294,7 +294,7 @@ console.log("student: ", JSON.stringify(std));
         </select>
       </td>    
      <td>
-         ${result.class??classes.toString().replaceAll(",", ", ").toUpperCase()}
+         ${result.class??result.classes.toString().replaceAll(",", ", ").toUpperCase()}
       </td>    
     
       `;
