--- a/admin/bursary/entry.html
+++ b/admin/bursary/entry.html
@@ -59,6 +59,11 @@
       <input required type="radio" id="cash" value="cash" name="method">
       Cash
     </label>
+      <label for="pos">
+      
+      <input required type="radio" id="pos" value="pos" name="method">
+      POS
+    </label>
     
     <button type="submit" id="recBtn">Record</button>
     </form>
